[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-to-md"
version = "1.0.0"
description = "Generate markdown reports from git changes and PR diffs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dmitriy Vasilyuk"},
]
keywords = ["git", "markdown", "pr", "diff", "documentation", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/your-username/pr-to-md"
Repository = "https://github.com/your-username/pr-to-md"
Issues = "https://github.com/your-username/pr-to-md/issues"

[project.scripts]
pr2md-advanced = "pr2md_a:main"
pr2md-simple = "pr2md_b:main"

[tool.setuptools.packages.find]
include = ["pr2md*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120 